[gd_scene load_steps=10 format=2]

[ext_resource path="res://Menu/Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Menu/Images/LogoCheeky.png" type="Texture" id=2]
[ext_resource path="res://World/Images/53-Theme-Ass-Required.png" type="Texture" id=3]
[ext_resource path="res://World/Images/wait-what.png" type="Texture" id=4]
[ext_resource path="res://World/Images/thermo.png" type="Texture" id=5]
[ext_resource path="res://UI/battlenet.ttf" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0784314, 0.133333, 0.25098, 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="Background" type="Sprite" parent="."]

[node name="GameJamLogo" type="Sprite" parent="."]
position = Vector2( 820.85, 152 )
scale = Vector2( 1.35433, 1.03401 )
texture = ExtResource( 2 )

[node name="AssemblyRequired" type="Sprite" parent="."]
position = Vector2( 808, 360 )
scale = Vector2( 0.151111, 0.10974 )
texture = ExtResource( 3 )

[node name="Wildcard" type="Sprite" parent="."]
position = Vector2( 960, 504 )
scale = Vector2( 0.136364, 0.146667 )
texture = ExtResource( 5 )

[node name="Wildcard2" type="Sprite" parent="."]
position = Vector2( 816, 504 )
scale = Vector2( 0.136364, 0.146667 )
texture = ExtResource( 4 )

[node name="Title" type="Control" parent="."]
margin_left = 384.0
margin_top = 64.0
margin_right = 467.0
margin_bottom = 180.0

[node name="Label" type="Label" parent="Title"]
margin_left = -168.0
margin_top = 24.0
margin_right = 204.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 2 )
text = "SUPER CYBER WORLD
UNDER ATTACK BY
A MASSIVE VIRUS
THAT WANTS TO 
TAKE OVER ALL BASES"

[node name="Label2" type="Label" parent="Title"]
margin_left = -72.0
margin_top = 256.0
margin_right = 61.0
margin_bottom = 291.0
custom_fonts/font = SubResource( 3 )
text = "The game"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 20.0
margin_top = 257.549
margin_right = 103.0
margin_bottom = 373.549

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 83.0
margin_bottom = 20.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Options")
text = "Start Game"

[node name="Tutorial" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
focus_neighbour_left = NodePath("../Quit")
focus_neighbour_top = NodePath("../Quit")
focus_neighbour_right = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Options")
text = "Tutorial"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
focus_neighbour_left = NodePath("../Start")
focus_neighbour_top = NodePath("../Start")
focus_neighbour_right = NodePath("../Credits")
focus_neighbour_bottom = NodePath("../Credits")
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 83.0
margin_bottom = 92.0
focus_neighbour_left = NodePath("../Options")
focus_neighbour_top = NodePath("../Options")
focus_neighbour_right = NodePath("../Quit")
focus_neighbour_bottom = NodePath("../Quit")
text = "Credits"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 83.0
margin_bottom = 116.0
focus_neighbour_left = NodePath("../Credits")
focus_neighbour_top = NodePath("../Credits")
focus_neighbour_right = NodePath("../Start")
focus_neighbour_bottom = NodePath("../Start")
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
